# modlib-test

./: CMakeLists.txt  ReadMe.md
cmake/: modlib-config.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  hello.cpp  lib.cpp  util.cpp
